@@ -1,3 +1,10 @@
+Thu Sep 26 22:11:56 2013  Zachary Scott  <e@zzak.io>
+
+	* ext/bigdecimal/bigdecimal.c: [DOC] several fixes by @chastell
+	  This includes fixing the capitalization of Infinity, return value of
+	  example "BigDecimal.new('NaN') == 0.0", and code style in example.
+	  [Fixes GH-398] https://github.com/ruby/ruby/pull/398
+
 Thu Sep 26 22:08:11 2013  Zachary Scott  <e@zzak.io>
 
 	* lib/observer.rb: [DOC] syntax improvement in example by @chastell
